Pouvoir modifier son home par le menu de panneau (#457)
* Remove weird things

* Fix small issue in SignGUI (already fixed in the original repo)

* Add the feature to rename homes from the config menu

* Fix italic

* Dumb

* Remove debug message

* Fix display name color